--- a/src/app/components/aboutus/aboutus.component.html
+++ b/src/app/components/aboutus/aboutus.component.html
@@ -117,7 +117,7 @@
                <h2 class="headingSec line_H_1 mrg-b-30" [innerHTML]="missionheading"></h2>
             </fieldset>
                <div class="dc_txt_summary dc_last_p text-justify" data-aos="fade-up" data-aos-duration="700" data-aos-delay="700">
-                 <p [innerHTML]="content"></p>
+                 <p [innerHTML]="missioncontent"></p>
                </div>
             </div>
          </div>
