--- a/src/app/components/ourteam/ourteam.component.html
+++ b/src/app/components/ourteam/ourteam.component.html
@@ -55,7 +55,7 @@
                     <div class="dcTeam_img mrg-b-30">
                        <img [src]="data.image.link" class="w-100" [alt]="data.image.alt">
                     </div>
-                    <div class="teamName_sec text-center mrg-b-30">
+                    <div class="teamName_sec text-justify mrg-b-30">
                        <div class="teamName f-w-B f-s-24 line_H_1">
                           {{data.name}}
                        </div>
@@ -65,7 +65,7 @@
                     </div>
 
                     <!-- {{getsentize(data.short_description)}} -->
-                    <div class="teamDesc text-center f-s-18 line_H_1_5 mrg-b-20" [innerHTML]="data.short_description">
+                    <div class="teamDesc text-justify f-s-18 line_H_1_5 mrg-b-20" [innerHTML]="data.short_description">
                       
                     </div>
                     <div class="teamRead_more text-center line_H_1">
