--- a/src/app/components/careers/careers.component.html
+++ b/src/app/components/careers/careers.component.html
@@ -1,165 +1,149 @@
 <!-- Loader Start -->
 <div id="preloader" *ngIf="loading">
    <div id="status">
-       <div id="cms-loadding">
-           <div class="loading-spinner">
-               <div class="cms-bounce1"></div>
-               <div class="cms-bounce2"></div>
-               <div class="cms-bounce3"></div>
-           </div>
-       </div>
+      <div id="cms-loadding">
+         <div class="loading-spinner">
+            <div class="cms-bounce1"></div>
+            <div class="cms-bounce2"></div>
+            <div class="cms-bounce3"></div>
+         </div>
+      </div>
    </div>
 </div>
 <!-- Loader End -->
 <div class="dc_pg_spcHead" *ngIf="contact">
-    <div class="main-container" *ngIf="contact">
+   <div class="main-container" *ngIf="contact">
       <fieldset data-aos="fade-up" data-aos-duration="700" data-aos-delay="300">
-       <div class="dc_pgHead_wrap text-center" style="background-image:url(./assets/images/head-bg.jpg);">
-          <h1 class="dc_pg_title">{{contact.pagetitle}}</h1>
-          <ol class="breadcrumb dc_cstBread f-w-B justify-content-center">
-             <li class="breadcrumb-item"><a href="#">Home</a></li>
-             <li class="breadcrumb-item active">{{contact.pagetitle}}</li>
-          </ol>
-       </div>
+         <div class="dc_pgHead_wrap text-center" style="background-image:url(./assets/images/head-bg.jpg);">
+            <h1 class="dc_pg_title">{{contact.pagetitle}}</h1>
+            <ol class="breadcrumb dc_cstBread f-w-B justify-content-center">
+               <li class="breadcrumb-item"><a href="#">Home</a></li>
+               <li class="breadcrumb-item active">{{contact.pagetitle}}</li>
+            </ol>
+         </div>
       </fieldset>
-    </div>
-    <div class="dc_spacer_t_90 dc_spacer_b_60">
-       <div class="main-container">
-          <div class="row row_gutter_30" *ngIf="contact">
-             <div class="col-md-6">
-                <div class="dc_txtSummary" data-aos="fade-up" data-aos-duration="700" data-aos-delay="200">
-                   <h2 class="headingSec line_H_1 mrg-b-30"  [innerHTML]="heading"></h2>
-                </div>
-                <div class="hrLine mrg-b-30" data-aos="fade-up" data-aos-duration="700" data-aos-delay="400"></div>
-             </div>
-          </div>
-          <div class="row row_gutter_30" *ngIf="contact">
-             <div class="col-md-6">
-                <div class="dc_txtSummary" data-aos="fade-up" data-aos-duration="700" data-aos-delay="300">
-                   <div class="dc_txt_summary dc_last_p text-justify" [innerHTML]="left_content">
-                     
-                   </div>
-                </div>
-             </div>
-             <div class="col-md-6">
-                <div class="dc_txtSummary" data-aos="fade-up" data-aos-duration="700" data-aos-delay="600">
-                   <div class="dc_txt_summary dc_last_p text-justify" [innerHTML]="right_content">
-                    
-                   </div>
-                </div>
-             </div>
-          </div>
-       </div>
-    </div>
-    <div class="dc_spacer_t_30 dc_spacer_b_90" >
-       <div class="main-container">
-          <div class="row row_gutter_30">
-             <div class="col-md-6">
-                <div class="dc_About_media_wrap mar-b-30">
-                   <ul class="list-unstyled row row_gutter_15 dc_wrapCols_UD" *ngIf="contact">
-                      <li class="col-6" data-aos="fade-up" data-aos-duration="700" data-aos-delay="200">
-                         <div class="dc_wrap_abt_Img dc_rds_8"><img class="w-100" src="{{img1.link}}" alt="{{img1.alt}}" /></div>
-                      </li>
-                      <li class="col-6" data-aos="fade-up" data-aos-duration="700" data-aos-delay="400">
-                         <div class="dc_wrap_abt_Img dc_rds_8"><img class="w-100" src="{{img2.link}}" alt="{{img2.alt}}" /></div>
-                      </li>
-                      <li class="col-6" data-aos="fade-up" data-aos-duration="700" data-aos-delay="600">
-                         <div class="dc_wrap_abt_Img dc_rds_8"><img class="w-100" src="{{img3.link}}" alt="{{img3.alt}}" /></div>
-                      </li>
-                      <li class="col-6" data-aos="fade-up" data-aos-duration="700" data-aos-delay="800">
-                         <div class="dc_wrap_abt_Img dc_rds_8"><img class="w-100" src="{{img4.link}}" alt="{{img4.alt}}" /></div>
-                      </li>
-                   </ul>
-                </div>
-             </div>
-             <div class="col-md-6">
-                <div class="careers-form" data-aos="fade-up" data-aos-duration="700" data-aos-delay="300">
-                   <form [formGroup]="career" enctype="multipart/form-data" (ngSubmit)="onSubmit()" >
-                      <div class="row_gutter_30">
-                         <div class="col-12">
-                            <div class="position-relative">
-                              <label class="f-s-24 f-w-B cmslabel">What is your name?</label>
-                              <input type="text" class="form-control cmsfield" name="name" formControlName="name">
-                              <div *ngIf="f.name.errors && (f.name.dirty || f.name.touched)" >
-                                <div *ngIf="f.name.errors.required" class="errorMsg">Name is required</div>
-                             </div>
-                            </div>
-                         </div>
-                         <div class="col-12">
-                           <div class="position-relative">
-                            <label class="f-s-24 f-w-B cmslabel">What is your Email Address?</label>
-                            <input type="text" class="form-control cmsfield" name="email" formControlName="email">
-                            <div *ngIf="f.email.errors && (f.email.dirty || f.email.touched)" >
+   </div>
+   <div class="dc_spacer_t_90 dc_spacer_b_60">
+      <div class="main-container">
+         <div class="row row_gutter_30" *ngIf="contact">
+            <div class="col-md-6">
+               <div class="dc_txtSummary" data-aos="fade-up" data-aos-duration="700" data-aos-delay="200">
+                  <h2 class="headingSec line_H_1 mrg-b-30"  [innerHTML]="heading"></h2>
+               </div>
+               <div class="hrLine mrg-b-30" data-aos="fade-up" data-aos-duration="700" data-aos-delay="400"></div>
+            </div>
+         </div>
+         <div class="row row_gutter_30" *ngIf="contact">
+            <div class="col-md-6">
+               <div class="dc_txtSummary" data-aos="fade-up" data-aos-duration="700" data-aos-delay="300">
+                  <div class="dc_txt_summary dc_last_p text-justify" [innerHTML]="left_content">
+                  </div>
+               </div>
+            </div>
+            <div class="col-md-6">
+               <div class="dc_txtSummary" data-aos="fade-up" data-aos-duration="700" data-aos-delay="600">
+                  <div class="dc_txt_summary dc_last_p text-justify" [innerHTML]="right_content">
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
+   <div class="dc_spacer_t_30 dc_spacer_b_90" >
+      <div class="main-container">
+         <div class="row row_gutter_30">
+            <div class="col-md-6">
+               <div class="dc_About_media_wrap mar-b-30">
+                  <ul class="list-unstyled row row_gutter_15 dc_wrapCols_UD" *ngIf="contact">
+                     <li class="col-6" *ngIf="img1.link" data-aos="fade-up" data-aos-duration="700" data-aos-delay="200">
+                        <div class="dc_wrap_abt_Img dc_rds_8"><img class="w-100" src="{{img1.link}}" alt="{{img1.alt}}" /></div>
+                     </li>
+                     <li class="col-6" *ngIf="img2.link" data-aos="fade-up" data-aos-duration="700" data-aos-delay="400">
+                        <div class="dc_wrap_abt_Img dc_rds_8"><img class="w-100" src="{{img2.link}}" alt="{{img2.alt}}" /></div>
+                     </li>
+                     <li class="col-6" *ngIf="img3.link" data-aos="fade-up" data-aos-duration="700" data-aos-delay="600">
+                        <div class="dc_wrap_abt_Img dc_rds_8"><img class="w-100" src="{{img3.link}}" alt="{{img3.alt}}" /></div>
+                     </li>
+                     <li class="col-6" *ngIf="img4.link" data-aos="fade-up" data-aos-duration="700" data-aos-delay="800">
+                        <div class="dc_wrap_abt_Img dc_rds_8"><img class="w-100" src="{{img4.link}}" alt="{{img4.alt}}" /></div>
+                     </li>
+                  </ul>
+               </div>
+            </div>
+            <div class="col-md-6">
+               <div class="careers-form" data-aos="fade-up" data-aos-duration="700" data-aos-delay="300">
+                  <form [formGroup]="career" enctype="multipart/form-data" (ngSubmit)="onSubmit()" >
+                  <div class="row_gutter_30">
+                     <div class="col-12">
+                        <div class="position-relative">
+                           <label class="f-s-24 f-w-B cmslabel">What is your name?</label>
+                           <input type="text" class="form-control cmsfield" name="name" formControlName="name">
+                           <div *ngIf="f.name.errors && (f.name.dirty || f.name.touched)" >
+                              <div *ngIf="f.name.errors.required" class="errorMsg">Name is required</div>
+                           </div>
+                        </div>
+                     </div>
+                     <div class="col-12">
+                        <div class="position-relative">
+                           <label class="f-s-24 f-w-B cmslabel">What is your Email Address?</label>
+                           <input type="text" class="form-control cmsfield" name="email" formControlName="email">
+                           <div *ngIf="f.email.errors && (f.email.dirty || f.email.touched)" >
                               <div *ngIf="f.email.errors.required" class="errorMsg">Email is required</div>
                               <div *ngIf="f.email.errors.email" class="errorMsg">Email must be a valid email address</div>
-                          </div>
-                          </div>
-                         </div>
-                         <div class="col-12">
-                           <div class="position-relative">
-                            <label class="f-s-24 f-w-B cmslabel">Where can we reach you?</label>
-                            <input type="text" class="form-control cmsfield" name="reach" formControlName="reach">
-                            <div *ngIf="f.reach.errors && (f.reach.dirty || f.reach.touched)" >
+                           </div>
+                        </div>
+                     </div>
+                     <div class="col-12">
+                        <div class="position-relative">
+                           <label class="f-s-24 f-w-B cmslabel">Where can we reach you?</label>
+                           <input type="text" class="form-control cmsfield" name="reach" formControlName="reach">
+                           <div *ngIf="f.reach.errors && (f.reach.dirty || f.reach.touched)" >
                               <div *ngIf="f.reach.errors.required" class="errorMsg">Address is required</div>
-                          </div>
-                          </div>
-                         </div>
-                         <div class="col-12">
-                           <div class="position-relative">
-                            <label class="f-s-24 f-w-B cmslabel">Tell us something interesting about you</label>
-                            <textarea class="form-control cmsfield tell" rows="5" name="tell_us" formControlName="tell_us"></textarea>
-                            <div *ngIf="f.tell_us.errors && (f.tell_us.dirty || f.tell_us.touched)" >
-                              <div *ngIf="f.tell_us.errors.required" class="errorMsg">tell_us is required</div>                             
-                            </div>
-                            </div>
-                         </div>
-                         <div class="col-12">
-                            <div class="d-flex justify-content-between">
-                               <div class="align-self-center position-relative w-100">
-                                  <label for="file" class="sr-only">File</label>
-                                  <div class="input-group ">
-                                     <span class="input-group-btn">
-                                       
-                                        <div class="btn btn-default  custom-file-uploader">
-                                          <label class="attachfield form-control font-rubik f-w-M">
-                                             <input type="file" (change)="handleUpload($event)" name="resume" formControlName="resume">
-                                             <i class="fa fa-paperclip"></i>
-                                             Attach Resume *
-                                          </label>
-                                        </div>
-                                    
-                                     </span>
-                                     <div class="errorMsg errorResume">
-                                     <div *ngIf="f.resume.errors && (f.resume.dirty || f.resume.touched)" >
+                           </div>
+                        </div>
+                     </div>
+                     <div class="col-12">
+                        <div class="position-relative">
+                           <label class="f-s-24 f-w-B cmslabel">Tell us something interesting about you</label>
+                           <textarea class="form-control cmsfield tell" rows="5" name="tell_us" formControlName="tell_us"></textarea>
+                           <div *ngIf="f.tell_us.errors && (f.tell_us.dirty || f.tell_us.touched)" >
+                              <div *ngIf="f.tell_us.errors.required" class="errorMsg">tell_us is required</div>
+                           </div>
+                        </div>
+                     </div>
+                     <div class="col-12">
+                        <div class="d-flex justify-content-between">
+                           <div class="align-self-center position-relative w-100">
+                              <label for="file" class="sr-only">File</label>
+                              <div class="input-group ">
+                                 <span class="input-group-btn">
+                                    <div class="btn btn-default  custom-file-uploader">
+                                       <label class="attachfield form-control font-rubik f-w-M">
+                                       <input type="file" (change)="handleUpload($event)" name="resume" formControlName="resume">
+                                       <i class="fa fa-paperclip"></i>
+                                       Attach Resume *
+                                       </label>
+                                    </div>
+                                 </span>
+                                 <div class="errorMsg errorResume">
+                                    <div *ngIf="f.resume.errors && (f.resume.dirty || f.resume.touched)" >
                                        <div *ngIf="f.resume.errors.required">Resume is required</div>
-                                     </div>
-
-                                     <div *ngIf="imageError > 0" >
+                                    </div>
+                                    <div *ngIf="imageError > 0" >
                                        <div *ngIf="imageError == 1">Please Enter File size Upto 2Mb</div>
                                        <div *ngIf="imageError == 2">Please Enter Valid File Format (JPG, JPEG, png, PDF, DOC, DOCX )</div>
                                     </div>
                                  </div>
-
-                                     <!-- <div class="attaccms">
-                                        <input type="text" name="filename" class="attachfield form-control font-rubik f-w-M" placeholder="Attach Resume" readonly>
-                                     </div> -->
-                                  </div>
-                                 
-                               </div>
-                               <!-- <button type="submit" class="pagebtn f-w-B transtn-1" [disabled]="!career.valid">
-                               Book an appointment
-                               </button> -->
-                               <button class="pagebtn f-w-B transtn-1" type="submit" [disabled]="!career.valid">Book an appointment</button>
-                            </div>
-                         </div>
-                      </div>
-                   </form>
-                </div>
-             </div>
-          </div>
-       </div>
-    </div>
- </div>
- <fieldset *ngIf="footersection">
-   <app-footer-top [dataString]="footersection"></app-footer-top>
-</fieldset>
+                              </div>
+                           </div>
+                           <button class="pagebtn f-w-B transtn-1" type="submit" [disabled]="!career.valid">Book an appointment</button>
+                        </div>
+                     </div>
+                  </div>
+                  </form>
+               </div>
+            </div>
+         </div>
+      </div>
+   </div>
+</div>
